// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid[Base] should render correctly  1`] = `
<div>
  <div
    class="cdho0s5 soui-slider-wrapper"
  >
    <div
      class="c29ccod soui-slider-track"
    >
      <div
        class="c-vi7vmf soui-slider-track-inner"
        style="left: 0%; right: 62.5%;"
      >
        <div
          class="cpjwr1t soui-slider-indicator ccnm7my soui-slider-indicator-end"
        />
      </div>
    </div>
    <div
      class="c-melx6h soui-slider-scale-wrapper"
    >
      <div
        class="c28izho soui-slider-scale"
      >
        <div
          class="c24n5xy soui-slider-label"
        >
          1
        </div>
      </div>
      <div
        class="c28izho soui-slider-scale"
      >
        <div
          class="c24n5xy soui-slider-label"
        >
          2
        </div>
      </div>
      <div
        class="c28izho soui-slider-scale"
      >
        <div
          class="c24n5xy soui-slider-label"
        >
          3
        </div>
      </div>
      <div
        class="c28izho soui-slider-scale"
      >
        <div
          class="c24n5xy soui-slider-label"
        >
          5
        </div>
      </div>
      <div
        class="c28izho soui-slider-scale"
      >
        <div
          class="c24n5xy soui-slider-label"
        >
          8
        </div>
      </div>
      <div
        class="c28izho soui-slider-scale"
      >
        <div
          class="c24n5xy soui-slider-label"
        >
          13
        </div>
      </div>
      <div
        class="c28izho soui-slider-scale"
      >
        <div
          class="c24n5xy soui-slider-label"
        >
          21
        </div>
      </div>
      <div
        class="c28izho soui-slider-scale"
      >
        <div
          class="c24n5xy soui-slider-label"
        >
          34
        </div>
      </div>
      <div
        class="c28izho soui-slider-scale"
      >
        <div
          class="c24n5xy soui-slider-label"
        >
          55
        </div>
      </div>
    </div>
  </div>
  <div
    style="height: 20px;"
  />
  <div
    style="background: rgb(232, 235, 240); margin-bottom: 4px; line-height: 30px;"
  >
    <div
      class="so-grid so-grid-full so-grid-md-20-000 "
      style="color: rgb(255, 255, 255); padding-left: 8px; background: rgb(25, 122, 250); font-size: 14px;"
    >
      1/5
    </div>
  </div>
  <div
    style="background: rgb(232, 235, 240); margin-bottom: 4px; line-height: 30px;"
  >
    <div
      class="so-grid so-grid-full so-grid-md-40-000 "
      style="color: rgb(255, 255, 255); padding-left: 8px; background: rgb(25, 122, 250); font-size: 14px;"
    >
      2/5
    </div>
  </div>
  <div
    style="background: rgb(232, 235, 240); margin-bottom: 4px; line-height: 30px;"
  >
    <div
      class="so-grid so-grid-full so-grid-md-60-000 "
      style="color: rgb(255, 255, 255); padding-left: 8px; background: rgb(25, 122, 250); font-size: 14px;"
    >
      3/5
    </div>
  </div>
  <div
    style="background: rgb(232, 235, 240); margin-bottom: 4px; line-height: 30px;"
  >
    <div
      class="so-grid so-grid-full so-grid-md-80-000 "
      style="color: rgb(255, 255, 255); padding-left: 8px; background: rgb(25, 122, 250); font-size: 14px;"
    >
      4/5
    </div>
  </div>
  <div
    style="background: rgb(232, 235, 240); margin-bottom: 4px; line-height: 30px;"
  >
    <div
      class="so-grid so-grid-full so-grid-md-100-000 "
      style="color: rgb(255, 255, 255); padding-left: 8px; background: rgb(25, 122, 250); font-size: 14px;"
    >
      5/5
    </div>
  </div>
</div>
`;

exports[`Grid[Base] should render correctly about gutter 1`] = `
<div
  style="background: rgb(232, 235, 240);"
>
  <div
    class="so-grid so-grid-full so-grid-md-100-000 "
    style="width: auto; display: block; margin-left: -4px; margin-right: -4px;"
  >
    <div
      class="so-grid so-grid-full so-grid-md-12-500 "
      style="padding-left: 4px; padding-right: 4px;"
    >
      <div
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(25, 122, 250); font-size: 14px;"
      >
        1/8
      </div>
    </div>
    <div
      class="so-grid so-grid-full so-grid-md-12-500 "
      style="padding-left: 4px; padding-right: 4px;"
    >
      <div
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(107, 181, 255); font-size: 14px;"
      >
        1/8
      </div>
    </div>
    <div
      class="so-grid so-grid-full so-grid-md-12-500 "
      style="padding-left: 4px; padding-right: 4px;"
    >
      <div
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(25, 122, 250); font-size: 14px;"
      >
        1/8
      </div>
    </div>
    <div
      class="so-grid so-grid-full so-grid-md-12-500 "
      style="padding-left: 4px; padding-right: 4px;"
    >
      <div
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(107, 181, 255); font-size: 14px;"
      >
        1/8
      </div>
    </div>
    <div
      class="so-grid so-grid-full so-grid-md-12-500 "
      style="padding-left: 4px; padding-right: 4px;"
    >
      <div
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(25, 122, 250); font-size: 14px;"
      >
        1/8
      </div>
    </div>
    <div
      class="so-grid so-grid-full so-grid-md-12-500 "
      style="padding-left: 4px; padding-right: 4px;"
    >
      <div
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(107, 181, 255); font-size: 14px;"
      >
        1/8
      </div>
    </div>
    <div
      class="so-grid so-grid-full so-grid-md-12-500 "
      style="padding-left: 4px; padding-right: 4px;"
    >
      <div
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(25, 122, 250); font-size: 14px;"
      >
        1/8
      </div>
    </div>
    <div
      class="so-grid so-grid-full so-grid-md-12-500 "
      style="padding-left: 4px; padding-right: 4px;"
    >
      <div
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(107, 181, 255); font-size: 14px;"
      >
        1/8
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid[Base] should render correctly about nested 1`] = `
<div
  class="so-grid so-grid-full so-grid-md-100-000 "
  style="text-align: center;"
>
  <div
    class="so-grid so-grid-full so-grid-md-50-000 "
    style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(25, 122, 250); font-size: 14px;"
  >
    1/2
  </div>
  <div
    class="so-grid so-grid-full so-grid-md-50-000 "
    style="line-height: 30px;"
  >
    <div
      style="font-size: 14px;"
    >
      1/2
    </div>
    <div>
      <div
        class="so-grid so-grid-full so-grid-md-33-333 "
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(25, 122, 250); font-size: 14px;"
      >
        1/3
      </div>
      <div
        class="so-grid so-grid-full so-grid-md-33-333 "
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(107, 181, 255); font-size: 14px;"
      >
        1/3
      </div>
      <div
        class="so-grid so-grid-full so-grid-md-33-333 "
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(25, 122, 250); font-size: 14px;"
      >
        1/3
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid[Base] should render correctly about offset 1`] = `
<div
  style="background: rgb(232, 235, 240);"
>
  <div
    class="so-grid so-grid-full so-grid-md-33-333 so-offset-md-33-333"
    style="color: rgb(255, 255, 255); line-height: 60px; text-align: center; background: rgb(25, 122, 250); font-size: 14px;"
  >
    With 1/3, Offset 1/3
  </div>
</div>
`;
